--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ watchgod = "^0.7"
 starlette = "^0.17.1"
 uvicorn = "^0.16.0"
 fastapi = "^0.71.0"
+asyncer = "^0.0.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
