--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ starlette = "^0.17.1"
 uvicorn = "^0.16.0"
 fastapi = "^0.71.0"
 asyncer = "^0.0.1"
+Sphinx = "^4.5.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
