--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,10 @@ authors = ["Paul Everitt <pauleveritt@me.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
-watchgod = "^0.7"
 starlette = "^0.19.0"
 uvicorn = "^0.16.0"
 Sphinx = "^4.5.0"
+watchfiles = "^0.11"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
