--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ starlette = "^0.19.0"
 uvicorn = "^0.16.0"
 Sphinx = "^4.5.0"
 watchfiles = "^0.11"
+myst-parser = "^0.17.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
