--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,10 @@ dependencies = [
     "htm~=0.1.1",
     "MarkupSafe~=2.1.3",
     "hopscotch>=0.3.1",
+    "anyio~=4.2",
+    "starlette~=0.34",
+    "watchfiles~=0.21",
+    "uvicorn"
 ]
 
 [tool.hatch.urls]
